[BE] Mały refaktor kodu